# paddle_ocr_imx6ull

./: CMakeLists.txt  README.md  build.sh  db_post_process.cc  make.sh  ocr_db_crnn.cc
camera/: v4l2_camera.c
camera/include/: v4l2_camera.h
cxx/include/: paddle_use_kernels.h  paddle_use_ops.h
cxx/opencv-linux-armv7hf/share/OpenCV/: OpenCVConfig.cmake
include/: db_post_process.h  paddle_use_ops.h  task_manager.h  v4l2_camera.h
install/paddle_lite_ocr/: paddle_lite_ocr
model/: config.txt  run.sh
ocr_lib/opencv-4-1-0-linux-armv7hf/include/opencv4/opencv2/: cvconfig.h
ocr_lib/opencv-4-1-0-linux-armv7hf/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
src/: db_post_process.cc  main.cc  task_manager.cc
